CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/Informe_de_Visita__c.object-meta.xml
<CustomObject>
    <label>Informe de Visita</label>
    <nameField>
        <displayFormat>INF-{00000}</displayFormat>
        <label>N° de Informe de Visita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informes de Visita</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>