CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Informes de Visita</relationshipLabel>
    <relationshipName>InformesVisitas</relationshipName>
    <type>Lookup</type>
</CustomField>