CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En proceso</fullName>
                <default>true</default>
                <label>En proceso</label>
            </value>
            <value>
                <fullName>Generado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>