CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/fields/Fecha_de_envio_Andes__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_envio_Andes__c</fullName>
    <description>Registra la fecha de envío del informe de visita en Andes</description>
    <label>Fecha de envío Andes</label>
    <type>DateTime</type>
</CustomField>