CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/fields/FechaProgramadaVisita__c.field-meta.xml
<CustomField>
    <fullName>FechaProgramadaVisita__c</fullName>
    <description>Fecha Programada Visita que se envía a ANDES</description>
    <label>Fecha Programada Visita</label>
    <type>DateTime</type>
</CustomField>