CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/fields/Id_Informe_de_visita_Andes__c.field-meta.xml
<CustomField>
    <fullName>Id_Informe_de_visita_Andes__c</fullName>
    <externalId>true</externalId>
    <label>Id Informe de visita Andes</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>