CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/fields/Id_Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Id_Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identificar al prospecto relacionado</description>
    <label>Prospecto</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Informes de Visita</relationshipLabel>
    <relationshipName>Informes_de_Visita</relationshipName>
    <type>Lookup</type>
</CustomField>