CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/fields/IsInformeVisitaAccount__c.field-meta.xml
<CustomField>
    <fullName>IsInformeVisitaAccount__c</fullName>
    <formula>if( Account__c != null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Informe de visita Cliente</label>
    <type>Checkbox</type>
</CustomField>