CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/fields/IsSentBtnAndes__c.field-meta.xml
<CustomField>
    <fullName>IsSentBtnAndes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check marcado por el servicio ANDES cuando recibe el informe de visita</description>
    <label>IsSentBtnAndes</label>
    <type>Checkbox</type>
</CustomField>