CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/validationRules/cnf_sales_rv_informevisit_Restr_FechVisi.validationRule-meta.xml
<ValidationRule>
    <fullName>cnf_sales_rv_informevisit_Restr_FechVisi</fullName>
    <active>true</active>
    <description>No se puede cambiar la fecha de informe de visita una vez generado el informe</description>
    <errorConditionFormula>AND(
ISPICKVAL(Estado__c, &apos;Generado&apos;),
ISCHANGED(FechaProgramadaVisita__c)
)</errorConditionFormula>
    <errorMessage>RV_LEA No puede cambiar la fecha programada de visita en estado &quot;Generado&quot;</errorMessage>
</ValidationRule>