CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/validationRules/cnf_sales_rv_informevisit_Restr_Generado.validationRule-meta.xml
<ValidationRule>
    <fullName>cnf_sales_rv_informevisit_Restr_Generado</fullName>
    <active>true</active>
    <description>Restringir al usuario que cambie a estado Generado manualmente</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Estado__c, &apos;Generado&apos;),
 IsSentBtnAndes__c == false
)</errorConditionFormula>
    <errorMessage>RV_LEA Se debe cambiar el estado del informe de visita mediante el botón Generar en ANDES</errorMessage>
</ValidationRule>