CNSDEVCOLECT/force-app/main/default/objects/Informe_de_Visita__c/validationRules/cnf_sales_rv_informevisit_Restr_Proceso.validationRule-meta.xml
<ValidationRule>
    <fullName>cnf_sales_rv_informevisit_Restr_Proceso</fullName>
    <active>true</active>
    <description>Restringir al usuario que cambie de estado Generado a En Proceso</description>
    <errorConditionFormula>AND(
ISPICKVAL(Estado__c, &quot;En proceso&quot;),
ISPICKVAL(PRIORVALUE(Estado__c), &quot;Generado&quot;)
)</errorConditionFormula>
    <errorMessage>RV_LEA El Informe de visita ya se encuentra generado.</errorMessage>
</ValidationRule>